--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -327,12 +327,12 @@ exactly '0'. <code>Boost.DI</code> will take care of everything for us!</p>
 <tr>
 <td><code>T*</code></td>
 <td>✔</td>
-<td>Ownerhsip transfer!</td>
+<td>Ownership transfer!</td>
 </tr>
 <tr>
 <td><code>const T*</code></td>
 <td>✔</td>
-<td>Ownerhsip transfer!</td>
+<td>Ownership transfer!</td>
 </tr>
 <tr>
 <td><code>T&amp;</code></td>
@@ -342,7 +342,7 @@ exactly '0'. <code>Boost.DI</code> will take care of everything for us!</p>
 <tr>
 <td><code>const T&amp;</code></td>
 <td>✔</td>
-<td>-</td>
+<td>Reference with <a href="../user_guide/index.html#di_singleton">singleton</a> / Temporary with <a href="../user_guide/index.html#di_unique">unique</a></td>
 </tr>
 <tr>
 <td><code>T&amp;&amp;</code></td>
