--- a/CHANGELOG/index.html
+++ b/CHANGELOG/index.html
@@ -188,7 +188,7 @@
 <li>Support for GCC-5+</li>
 <li>Support for CMake 2.8+</li>
 <li>Support for libc++, libstdc++</li>
-<li>Support for clang-format</li>
+<li>Support for Mac OS</li>
 </ul>
 <h2 id="050-2015-01-12"><a href="https://github.com/krzysztof-jusiak/di/compare/v0.1.0...v0.5.0">0.5.0</a> - 2015-01-12</h2>
 <ul>
